[package]
name = "packed-font"
version = "0.1.0"
description = "Compile-time font rasterizer and packer for embedded systems"
categories = ["embedded", "graphics", "no-std"]
keywords = ["embedded", "graphics", "font", "no_std", "truetype"]
authors = ["Alexey Galakhov <agalakhov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/agalakhov/packed-font"
documentation = "https://docs.rs/packed-font/0.1.0"
repository = "https://github.com/agalakhov/packed-font"
edition = "2024"
include = ["examples/*", "src/*", "LICENSE", "README.md"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
embedded-graphics = "0.8.2"
packed-font-derive = "0.1.0"
packed-font-structs = "0.1.0"

[dev-dependencies]
embedded-graphics-simulator = "0.8.0"
